--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,40 @@
     <string name="sync_header">Sync</string>
 
     <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
+    <string name="Account">Account</string>
     <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
+    <string name="Account_Settings">Account Settings</string>
     <string name="attachment_title">Download incoming attachments</string>
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
+    <string name="auto_download">auto download</string>
+    <string name="notification">New Message Notification</string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <string-array name="time">
+
+        <item>15 seconds</item>
+        <item>30 seconds</item>
+        <item>1 hour</item>
+        <item>2 hours</item>
+        <item>3 hours</item>
+    </string-array>
+
+    <string-array name="privacy_info">
+        <item>Status</item>
+        <item>Birth date</item>
+        <item>Last seen</item>
+        <item>Read receipts</item>
+        <item>Profile picture</item>
+    </string-array>
+
+    <string-array name="privacy_info_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 </resources>
